Handle when a xdg-toplevel changes its min or max size

We previously never emitted maximiziableChanged() meaning we never
synced the state to the decoration.
BUG:439578